kubernetes/apps/00-core-infra/01-namespace-onboarding.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: retail-prod
  labels:
    environment: production
    team: retail-devops
    managed-by: argocd
